--- a/src/main/resources/fes/aragon/vectores/aprendervec.fxml
+++ b/src/main/resources/fes/aragon/vectores/aprendervec.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="566.0" prefWidth="964.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fes.aragon.vectores.AprenderVec">
+<AnchorPane prefHeight="566.0" prefWidth="964.0" style="-fx-background-color: skyblue;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fes.aragon.vectores.AprenderVec">
    <children>
       <Label layoutX="249.0" layoutY="7.0" text=" Suma de Vectores">
          <font>
