--- a/src/main/resources/fes/aragon/vectores/bienvenida.fxml
+++ b/src/main/resources/fes/aragon/vectores/bienvenida.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -7,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fes.aragon.vectores.Interfaz.BienvenidaController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: skyblue;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fes.aragon.vectores.Interfaz.BienvenidaController">
    <children>
       <Button layoutX="398.0" layoutY="324.0" onAction="#iniciarCalculadora" prefHeight="51.0" prefWidth="150.0" text="Sumar">
          <font>
@@ -81,4 +82,7 @@
          </font>
       </Label>
    </children>
+   <cursor>
+      <Cursor fx:constant="CLOSED_HAND" />
+   </cursor>
 </Pane>
