--- a/src/main/resources/fes/aragon/vectores/calculadora.fxml
+++ b/src/main/resources/fes/aragon/vectores/calculadora.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="486.0" prefWidth="607.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21" fx:controller="fes.aragon.vectores.Interfaz.CalculadoraController">
+<AnchorPane prefHeight="486.0" prefWidth="607.0" style="-fx-background-color: skyblue;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fes.aragon.vectores.Interfaz.CalculadoraController">
     <children>
 
         <Label layoutX="20.0" layoutY="60.0" text="Vector 1:" />
@@ -36,11 +36,17 @@
         <Label layoutX="300.0" layoutY="209.0" text="Magnitud:" />
         <TextField fx:id="vector2MagnitudField" layoutX="390.0" layoutY="206.0" promptText="Ingrese Magnitud" />
 
-        <Button fx:id="sumaButton" layoutX="236.0" layoutY="272.0" text="Sumar Vectores" onAction="#sumarVectores"/>
+        <Button fx:id="sumaButton" layoutX="236.0" layoutY="272.0" onAction="#sumarVectores" text="Sumar Vectores">
+         <font>
+            <Font size="16.0" />
+         </font></Button>
 
 
-        <Label layoutX="166.0" layoutY="367.0" text="Resultado:" />
-        <TextArea fx:id="resultadoArea" editable="false" layoutX="240.0" layoutY="350.0" prefHeight="50.0" prefWidth="300.0" />
+        <Label layoutX="79.0" layoutY="360.0" text="Resultado:">
+         <font>
+            <Font size="20.0" />
+         </font></Label>
+        <TextArea fx:id="resultadoArea" editable="false" layoutX="213.0" layoutY="350.0" prefHeight="50.0" prefWidth="300.0" />
       <Label layoutX="152.0" layoutY="14.0" text="SUMA DE VECTORES">
          <font>
             <Font size="28.0" />
