--- a/src/main/resources/fes/aragon/vectores/bienvenida.fxml
+++ b/src/main/resources/fes/aragon/vectores/bienvenida.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
@@ -20,24 +21,24 @@
             <Font name="System Bold" size="22.0" />
          </font>
       </Label>
-      <Label layoutX="241.0" layoutY="68.0" text="Integrantes: ">
+      <Label layoutX="122.0" layoutY="68.0" text="Integrantes: ">
          <font>
             <Font name="System Bold Italic" size="20.0" />
          </font>
       </Label>
-      <Label layoutX="14.0" layoutY="126.0" text="Alamilla Cordova Angel Gabriel">
+      <Label layoutX="7.0" layoutY="98.0" prefHeight="21.0" prefWidth="230.0" text="Alamilla Cordova Angel Gabriel">
          <font>
             <Font name="System Bold Italic" size="15.0" />
          </font></Label>
-      <Label layoutX="363.0" layoutY="126.0" text="Martinez Bautista Carlos Alberto">
+      <Label layoutX="-5.0" layoutY="119.0" text="Martinez Bautista Carlos Alberto">
          <font>
             <Font name="System Bold Italic" size="15.0" />
          </font></Label>
-      <Label layoutX="350.0" layoutY="190.0" text="Angeles Mermejo Octavio Emiliano">
+      <Label layoutX="3.0" layoutY="140.0" text="Angeles Mermejo Octavio Emiliano">
          <font>
             <Font name="System Bold Italic" size="15.0" />
          </font></Label>
-      <Label layoutX="14.0" layoutY="192.0" text="Munguia Serrano Luis Antonio">
+      <Label layoutX="2.0" layoutY="161.0" text="Munguia Serrano Luis Antonio">
          <font>
             <Font name="System Bold" size="15.0" />
          </font></Label>
@@ -51,7 +52,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <ImageView fx:id="Imagen1" fitHeight="110.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="Imagen1" fitHeight="90.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@VectorSoluciones.jpeg" />
          </image>
@@ -66,7 +67,7 @@
             <Font size="20.0" />
          </font>
       </Button>
-      <Label layoutX="14.0" layoutY="213.0" prefHeight="45.0" prefWidth="239.0" text="¿Quieres aprender como se">
+      <Label layoutX="14.0" layoutY="225.0" prefHeight="45.0" prefWidth="239.0" text="¿Quieres aprender como se">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -76,11 +77,22 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="20.0" layoutY="246.0" prefHeight="30.0" prefWidth="204.0" text=" realiza una suma de vectores?">
+      <Label layoutX="20.0" layoutY="255.0" prefHeight="30.0" prefWidth="204.0" text=" realiza una suma de vectores?">
          <font>
             <Font name="System Bold Italic" size="13.0" />
          </font>
       </Label>
+      <Label layoutX="229.0" layoutY="4.0" text="Version app:Intellj idea">
+         <font>
+            <Font name="System Bold Italic" size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="385.0" layoutY="74.0" text="Que hicieron:">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
+      <TextArea fx:id="miTextArea" layoutX="300.0" layoutY="99.0" prefHeight="145.0" prefWidth="288.0" text="Angel:Hizo la parte de adelante &#10;que seria la bienvenida y el boton donde &#10;te enseña a como hacer la suma de&#10;vectores&#10;Carlos:Hizo la parte de atras donde&#10;creo las variables de suma,direccion,&#10;angulo.&#10;Emiliano y Luis: Hicieron la parte de &#10;adelante del boton sumar donde &#10;se pone el vector x,y magnitud,&#10;direcciom,angulo y la grafica con el &#10;resultado&#10;" />
    </children>
    <cursor>
       <Cursor fx:constant="CLOSED_HAND" />
